kubernetes-manifests/overlays/dev/hub.dev.ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: hub-dev-ingress
  namespace: hub-dev
  annotations:
    kubernetes.io/ingress.class: nginx
    cloud.google.com/neg: '{"ingress": false}'
spec:
  tls:
  - secretName: hub-dev-cert-vvkpp
  backend:
    serviceName: dev-hub
    servicePort: 8080
  rules:
  - host: hub-dev.aashe.org
    http:
      paths:
      - path: /*
        backend:
          serviceName: dev-hub
          servicePort: 8080
